# cc-tts

./: .gitignore  README.md  pyproject.toml  test_chinese_wakeword.py  test_daemon_sherpa.py  test_wake_continuous.py  test_wake_debug.py
docs/: mic-test.md  sherpa-onnx-setup.md
docs/plans/: 2025-02-18-sherpa-onnx-backend-design.md  2025-02-18-sherpa-onnx-implementation.md  2025-02-18-wekws-wakeword.md  2026-01-23-implementation-plan.md  2026-01-23-voice-input-design.md  2026-01-28-voice-assistant-design.md  2026-01-28-voice-assistant-impl.md
docs/references/: wake-word-research-2024-2025.md
models/: .gitattributes
models/sherpa_kws/: README.md
models/wekws/: README.md
models/wekws/wenwen/: .msc  .mv  README.md  configuration.json  finetune_avg_10.pt  keywords.json  kwsr.cfg  kwsr.net
scripts/: install-service.sh
src/cc_stt/: __init__.py  config.py  daemon.py  daemon_simple.py  editor.py  hotwords.py  recorder.py  sender.py  server.py  transcriber.py  voice_edit.py  wakeword.py
src/cc_stt/features/: __init__.py  audio.py
src/cc_stt/models/sherpa_kws/: __init__.py  download.py
src/cc_stt/wakeword/: __init__.py  base.py  factory.py  openwakeword.py  sherpa_onnx.py  wekws.py
systemd/: cc-stt-daemon.service
tests/: test_config.py  test_daemon.py  test_editor.py  test_hotwords.py  test_integration.py  test_recorder.py  test_sender.py  test_transcriber.py  test_voice_edit.py  test_wakeword.py
tests/features/: test_audio.py
tests/wakeword/: test_factory.py  test_sherpa_onnx.py  test_wekws.py
