[project]
name = "cc-stt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dayn9t", email = "dayn9t@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "funasr>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "modelscope>=1.9.0",
    "numba>=0.57.0",
    "umap-learn>=0.5.4",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "typer>=0.21.1",
]

[project.scripts]
cc-stt = "cc_stt:cli"

[dependency-groups]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
