[project]
name = "cc-stt"
version = "0.1.0"
description = "Voice input tool for Claude Code using FunASR"
readme = "README.md"
authors = [
    { name = "dayn9t", email = "dayn9t@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "funasr>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "modelscope>=1.9.0",
    "pyperclip>=1.8.0",
    "ollama>=0.4.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "openwakeword==0.4.0",
    "sherpa-onnx>=1.12.25",
    "onnxruntime==1.23.2",
    "librosa>=0.11.0",
]

[tool.uv]
# openwakeword 0.6.0 requires tflite-runtime which doesn't support Python 3.12+
# Using 0.4.0 which includes ONNX models and works with Python 3.12
# Install manually: uv pip install openwakeword==0.4.0

[project.scripts]
cc-stt = "cc_stt:cli"
cc-stt-daemon = "cc_stt:daemon_cli"

[dependency-groups]
dev = [
    "psutil>=7.2.2",
    "pytest>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
